--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,25 +5,65 @@
   margin: 0px;
 }
 .grail-header {
-  background-color: brown;
+  font-family: 'Rubik Mono One', sans-serif;
+  font-size: 50px;
+  text-align: center;
+  color: white;
+  padding: 5px;
+  background-color: #1684A8;
+  box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.2)
 }
 .grail-body {
   display: flex;
+  flex-direction: column;
+  /*text-align: center;*/
   flex: 1;
-}
-.grail-content {
-  flex: 1;
-}
-.grail-nav, .grail-aside {
-  flex: 0 0 12em;
 }
 .grail-nav {
+  display: flex;
+  flex-direction: column;
   order: -1;
-  background-color: grey;
+  color: white;
+  background-color: #3DAED4;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.2);
 }
 .grail-aside {
   background-color: grey;
 }
+.grail-nav, .grail-aside {
+  box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.2);
+}
 .grail-footer {
-  background-color: brown;
+  background-color: #1684A8;
+}
+.nav {
+  padding-top: 5px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.4);
+  box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.2);
+}
+.nav:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+  font-size: 25px;
+  padding-bottom: 15px;
+  padding-top: 10px;
+}
+.text-box {
+  padding: 5%;
+  /*box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.2)*/
+}
+@media (min-width: 768px) {
+  .grail-body {
+    flex-direction: row;
+    flex: 1;
+  }
+  .grail-content {
+    flex: 1;
+  }
+  .grail-nav, .grail-aside {
+    flex: 0 0 12em;
+  }
 }
